--- a/.github/workflows/dev-ci.yaml
+++ b/.github/workflows/dev-ci.yaml
@@ -1,6 +1,5 @@
 name: hello ops girls dev pipeline
 run-name: dev-ci
-
 on:
   push:
     branches: ["*"]
@@ -21,13 +20,14 @@ jobs:
       - uses: actions/checkout@v3
       - id: aws-auth
         uses: "./.github/actions/aws-auth"
+      - name: Build and push dev image to ECR
         env:
-         REGISTRY: ${{ steps.aws-auth.outputs.registry }}
-         REPOSITORY: devopsgirl2023/hello-ops-girl
-         IMAGE_TAG: ${{ github.sha }}-hmj
+          REGISTRY: ${{ steps.aws-auth.outputs.registry }}
+          REPOSITORY: devopsgirl2023/hello-ops-girl
+          IMAGE_TAG: ${{ github.sha }}-hmj
         run: |
-         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
 
   test:
@@ -36,4 +36,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: "./.github/actions/aws-auth"
+      - name: Unit test
         run: ./auto/test
